# bromo-lib

./: .gitignore  .pypirc  MANIFEST.in  README.md  bromo-Leonardo.pipirc  bromo.py  bromo.pypirc  leia-me.md  links.txt  pips.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.eggs/async_generator-1.10-py3.9.egg/EGG-INFO/: RECORD
.eggs/cffi-1.15.0-py3.9-win-amd64.egg/EGG-INFO/: RECORD
.eggs/cryptography-35.0.0-py3.9-win-amd64.egg/EGG-INFO/: RECORD  requires.txt
.eggs/h11-0.12.0-py3.9.egg/EGG-INFO/: RECORD
.eggs/outcome-1.1.0-py3.9.egg/EGG-INFO/: RECORD
.eggs/pyOpenSSL-21.0.0-py3.9.egg/EGG-INFO/: RECORD  requires.txt
.eggs/selenium-4.0.0-py3.9.egg/EGG-INFO/: RECORD  requires.txt
.eggs/trio-0.19.0-py3.9.egg/EGG-INFO/: RECORD  requires.txt
.eggs/trio_websocket-0.9.2-py3.9.egg/EGG-INFO/: RECORD  requires.txt
.eggs/wsproto-1.0.0-py3.9.egg/EGG-INFO/: RECORD  requires.txt
Bromo/: __init__.py
Bromo.egg-info/: PKG-INFO  SOURCES.txt
brtest/: a.py
src/bromo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
