[metadata]
description-file = README.md
version = 0.2

author = Example Author
author_email=leonardo_leal15@outlook.com
description=lib to help with page loading strategy
long_description = file: README.md

url = https://github.com/CoelhoBranco/bromo-lib
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src